tab to delete vms with freeze state of 3 or more
