# backend/proxmox_api/swagger/swagger.yaml
@@ -260,6 +260,31 @@ paths:
         "404":
           description: vm not found
       x-openapi-router-controller: proxmox_api.controllers.default_controller
+  /expired:
+    get:
+      summary : get the list of users with expired cotisation
+      operationId: get_expired_cotisation_users
+      tags:
+          - User
+      responses : 
+        "200" :
+          description : "The list of users with expired cotisation"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+                example: ["seaweedbrain", "seberus", "nishogi", "valt"]
+
+                x-content-type: application/json
+        "400":
+          description: "invalid input, object invalid"
+        "403":
+          description: "not enough permissions"
+        "404":
+          description: "no user found"
+      x-openapi-router-controller: proxmox_api.controllers.default_controller
   /max_account_ressources:
     get:
       summary : max ressources a single account can have
